Renders objects from data

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="sv" dir="ltr">
 	<head>
 		<meta charset="utf-8">
 		<title>Djuraffär AB</title>
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<ul class="menu">
-				<li><img url="https://i.pinimg.com/originals/0a/e1/5e/0ae15e66f2be1672974f3e3d86c52e86.png" alt=""></li>
+				<li><img src="https://pinimg.icu/ipi/0x0/713b5/cat-dog-love-logo-by-vadim-carazan-for-a-pet-Ec9d85330384c2829d329c50690154970.jpg" alt="fisk"></li>
 				<li>sökfält</li>
 				<li>inlggning</li>
 				<li>kundvagn</li>
@@ -20,13 +20,13 @@
       <div class="wrapper">
 
 			<h1>Djuren</h1>
-			<div class="">
-				<div class="card">
+			<div class="" id="animalCards">
+				<!-- <div class="card">
 					Kakadua ... 20kr
 				</div>
 				<div class="card">
 					Häst ... 15kr
-				</div>
+				</div> -->
 
 			</div>
     </div>
