Final vanilla JS version

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<ul class="menu">
-				<li><img src="https://pinimg.icu/ipi/0x0/713b5/cat-dog-love-logo-by-vadim-carazan-for-a-pet-Ec9d85330384c2829d329c50690154970.jpg" alt="fisk"></li>
+				<li><img src="https://rundqvistsboktryckeri.files.wordpress.com/2015/04/riding-struts.jpg" alt="fisk"></li>
 				<li>sökfält</li>
 				<li>inlggning</li>
 				<li>kundvagn</li>
@@ -20,16 +20,8 @@
       <div class="wrapper">
 
 			<h1>Djuren</h1>
-			<div class="" id="animalCards">
-				<!-- <div class="card">
-					Kakadua ... 20kr
-				</div>
-				<div class="card">
-					Häst ... 15kr
-				</div> -->
-
-			</div>
-    </div>
+			<div class="" id="animalCards"> </div>
+    	</div>
 
 		</main>
 	</body>
